--- a/page1.html
+++ b/page1.html
@@ -33,16 +33,12 @@
                         <a class="nav-link" aria-current="page" href="page3.html">page 3</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
     
 <!-- page content goes here -->
-<h1 class="display-1">Display 1</h1>
+page1.html
 <!-- end of page content -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
