--- a/page3.html
+++ b/page3.html
@@ -36,10 +36,12 @@
             </div>
         </div>
     </nav>
-    
-<!-- page content goes here -->
-page3.html
-<!-- end of page content -->
+
+    <!-- page content goes here -->
+    <div class="container-fluid">
+        <h1 class="display-1">page3.html</h1>
+    </div>
+    <!-- end of page content -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
