--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,9 @@
     </nav>
     
 <!-- page content goes here -->
-page2.html
+<div class="container-fluid">
+    <h1 class="display-1">page2.html</h1>
+</div>
 <!-- end of page content -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
