--- a/page3.html
+++ b/page3.html
@@ -39,13 +39,63 @@
 
     <!-- page content goes here -->
     <div class="container-fluid">
-        <h1 class="display-1">page3.html</h1>
+
+        <form class="container">
+            <div class="form-group">
+                <label>Enter a Number</label>
+                <input type="number" class="form-control" id="num">
+            </div>
+            <br>
+            <button type="button" class="btn btn-success" id="submit">Submit</button>
+            <br>
+            <div class="form-group">
+                <label>Output</label>
+                <textarea class="form-control" id="output" rows="10"></textarea>
+            </div>
+
+        </form>
+
     </div>
     <!-- end of page content -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+
+    <script>
+        $(document).ready(function() {
+            $("form").submit(function (e) {
+                e.preventDefault();
+            });
+
+            $("#submit").click(function() {
+                var $output = $("#output");
+                var num = $("#num").val();
+                var value = "your number is " + num;
+
+                $output.val(value);
+                for (var i=1; i<=num; i++) {
+                    var finalOutput = "";
+                    if (i % 3 == 0) {
+                        finalOutput += "Fizz"
+                    }
+                    if (i % 5 == 0) {
+                        finalOutput += "Buzz"
+                    }
+                    if (i % 3 != 0 && i % 5 != 0) {
+                        finalOutput = i
+                    }
+
+                    console.info("i=" + finalOutput);
+                    $output.val($output.val() + "\n" + finalOutput);
+                }
+            });
+        });
+    </script>
+
 </body>
 
 </html>
